[gd_scene load_steps=46 format=3 uid="uid://cylce3ac7an7f"]

[ext_resource type="Texture2D" uid="uid://ic5qk4rajw6o" path="res://kenney_prototype-textures/pngs/texture_wall.png" id="1_cm5q3"]
[ext_resource type="Texture2D" uid="uid://ct5obyn7p5b26" path="res://kenney_prototype-textures/Vector/texture_01.svg" id="1_p8klg"]
[ext_resource type="PackedScene" uid="uid://bf4xgew11g0y6" path="res://prefabs/controllable.tscn" id="2_o268x"]
[ext_resource type="Script" path="res://player.gd" id="2_tm0ii"]
[ext_resource type="Script" path="res://controllable_detection.gd" id="4_mnrto"]
[ext_resource type="Script" path="res://rotate_with_mouse.gd" id="5_ynxwe"]
[ext_resource type="Material" uid="uid://6jxrjutahw72" path="res://arrow_color.tres" id="6_slhd8"]
[ext_resource type="Script" path="res://addons/godot_state_charts/state_chart.gd" id="8_v3xjy"]
[ext_resource type="Script" path="res://addons/godot_state_charts/compound_state.gd" id="9_xvk8c"]
[ext_resource type="Script" path="res://addons/godot_state_charts/atomic_state.gd" id="10_sdl42"]
[ext_resource type="Script" path="res://addons/godot_state_charts/transition.gd" id="11_xoomb"]
[ext_resource type="Script" path="res://move_with_player.gd" id="12_ak4db"]
[ext_resource type="PackedScene" path="res://addons/godot_state_charts/utilities/state_chart_debugger.tscn" id="12_q4a42"]
[ext_resource type="Script" path="res://control_tooltip.gd" id="12_xgk82"]
[ext_resource type="Texture2D" uid="uid://buyw8cncaolac" path="res://textures_keyboard_controls/keyboard_escape.svg" id="13_7aih0"]
[ext_resource type="Texture2D" uid="uid://j7s00sh2y6r4" path="res://textures_keyboard_controls/keyboard_f.svg" id="14_0qnn5"]
[ext_resource type="Texture2D" uid="uid://bd8ta4wtwm3wr" path="res://textures_keyboard_controls/mouse_left.svg" id="15_chj1h"]
[ext_resource type="Theme" uid="uid://s2bj74tt0y7f" path="res://godot_state_charts_examples/new_theme.tres" id="15_jjqdq"]
[ext_resource type="Script" path="res://pressure_plate.gd" id="18_s5klu"]
[ext_resource type="Material" uid="uid://ci4bmfeh301bt" path="res://materials/pressure_plate_material_normal_1.tres" id="19_0gneh"]
[ext_resource type="Material" uid="uid://0v46os1n31bx" path="res://materials/pressure_plate_material_pressed.tres" id="19_45y5y"]
[ext_resource type="Material" uid="uid://hyvreme4ba37" path="res://materials/pressure_plate_material_normal_2.tres" id="21_4idxb"]
[ext_resource type="Script" path="res://door.gd" id="23_s04dm"]
[ext_resource type="Material" uid="uid://sp0ojd44sa8w" path="res://materials/door_closed_material.tres" id="23_s7k4x"]
[ext_resource type="Material" uid="uid://c77sbps2wumbt" path="res://materials/door_open_material.tres" id="24_uway1"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_fcvr3"]
albedo_color = Color(0.28, 0.128053, 0.0336, 1)
albedo_texture = ExtResource("1_cm5q3")

[sub_resource type="BoxMesh" id="BoxMesh_7dm8p"]
material = SubResource("StandardMaterial3D_fcvr3")
size = Vector3(1, 2, 8)

[sub_resource type="ConvexPolygonShape3D" id="ConvexPolygonShape3D_o10lm"]
points = PackedVector3Array(0.579253, 1.09524, 4.06349, -0.56338, -1.06349, -4.06349, 0.579253, -1.06349, -4.06349, -0.56338, -1.06349, 4.06349, -0.56338, 1.09524, -4.06349, 0.579253, 1.09524, -4.06349, 0.579253, -1.06349, 4.06349, -0.56338, 1.09524, 4.06349)

[sub_resource type="ConvexPolygonShape3D" id="ConvexPolygonShape3D_3dnwh"]
points = PackedVector3Array(0.579253, 1.09524, 4.06349, -0.56338, -1.06349, -4.06349, 0.579253, -1.06349, -4.06349, -0.56338, -1.06349, 4.06349, -0.56338, 1.09524, -4.06349, 0.579253, 1.09524, -4.06349, 0.579253, -1.06349, 4.06349, -0.56338, 1.09524, 4.06349)

[sub_resource type="ConvexPolygonShape3D" id="ConvexPolygonShape3D_fe42c"]
points = PackedVector3Array(0.579253, 1.09524, 4.06349, -0.56338, -1.06349, -4.06349, 0.579253, -1.06349, -4.06349, -0.56338, -1.06349, 4.06349, -0.56338, 1.09524, -4.06349, 0.579253, 1.09524, -4.06349, 0.579253, -1.06349, 4.06349, -0.56338, 1.09524, 4.06349)

[sub_resource type="ConvexPolygonShape3D" id="ConvexPolygonShape3D_jctxr"]
points = PackedVector3Array(0.579253, 1.09524, 4.06349, -0.56338, -1.06349, -4.06349, 0.579253, -1.06349, -4.06349, -0.56338, -1.06349, 4.06349, -0.56338, 1.09524, -4.06349, 0.579253, 1.09524, -4.06349, 0.579253, -1.06349, 4.06349, -0.56338, 1.09524, 4.06349)

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_imhj4"]
sky_horizon_color = Color(0.64625, 0.65575, 0.67075, 1)
ground_horizon_color = Color(0.64625, 0.65575, 0.67075, 1)

[sub_resource type="Sky" id="Sky_034on"]
sky_material = SubResource("ProceduralSkyMaterial_imhj4")

[sub_resource type="Environment" id="Environment_b3wwa"]
background_mode = 2
sky = SubResource("Sky_034on")
tonemap_mode = 2
glow_enabled = true

[sub_resource type="BoxShape3D" id="BoxShape3D_sgmla"]
size = Vector3(100, 1, 100)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_5e1sp"]
albedo_texture = ExtResource("1_p8klg")
uv1_scale = Vector3(100, 100, 1)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_4l67q"]
albedo_color = Color(0, 1, 0.0999999, 1)

[sub_resource type="CapsuleMesh" id="CapsuleMesh_v4icb"]
material = SubResource("StandardMaterial3D_4l67q")
radius = 0.2
height = 1.0

[sub_resource type="ConvexPolygonShape3D" id="ConvexPolygonShape3D_elfxu"]
points = PackedVector3Array(0.190622, 0.340095, 0.0427398, -0.193135, -0.338923, -0.0310244, -0.177289, -0.351479, -0.0747747, -0.16398, 0.383904, -0.0753819, -0.0600953, 0.32193, 0.188647, 0.11673, -0.369802, 0.146319, 0.0859448, -0.335648, -0.176689, 0.0278977, 0.339474, -0.193446, -0.147558, -0.335783, 0.129782, 0.188647, -0.32193, -0.0600953, 0.0288523, -0.487654, -0.0625052, -0.0891595, -0.321166, -0.176769, -0.191178, 0.30631, 0.0567225, 0.028905, 0.488499, 0.0594362, 0.144493, 0.336035, -0.133056, 0.099397, 0.317427, 0.171555, -0.0457956, -0.339183, 0.190107, -0.116906, 0.317159, -0.160164, -0.0618573, -0.467355, 0.0888369, 0.186824, -0.289876, 0.0708561, 0.0586138, 0.46682, -0.0919081, -0.122093, 0.451968, 0.0435783, 0.119466, -0.454024, 0.0437837, 0.057189, -0.323406, 0.18952, -0.0470766, 0.47042, -0.0926045, -0.190797, 0.291104, -0.0597801, -0.0766135, -0.450316, -0.106639, -0.147558, 0.335785, 0.129783, 0.190107, 0.339183, -0.0457956, -0.0310246, -0.338926, -0.193136, 0.159071, 0.335966, 0.115245, 0.0427392, 0.34009, 0.19062)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_cqhaw"]
albedo_color = Color(0, 1, 0.95, 0.403922)

[sub_resource type="BoxShape3D" id="BoxShape3D_wyyjr"]
size = Vector3(0.4, 2, 5)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_xn6at"]
albedo_color = Color(1, 0, 0.95, 0.403922)

[sub_resource type="Theme" id="Theme_sdmj6"]

[sub_resource type="BoxShape3D" id="BoxShape3D_l5k13"]
size = Vector3(1, 0.1, 1)

[sub_resource type="BoxShape3D" id="BoxShape3D_v384s"]
size = Vector3(1, 1, 0.5)

[node name="Root" type="Node3D"]
metadata/_edit_vertical_guides_ = [-1927.0]

[node name="Level" type="Node3D" parent="."]

[node name="NorthWall" type="MeshInstance3D" parent="Level"]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 0, 1, -4)
mesh = SubResource("BoxMesh_7dm8p")

[node name="StaticBody3D" type="StaticBody3D" parent="Level/NorthWall"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Level/NorthWall/StaticBody3D"]
shape = SubResource("ConvexPolygonShape3D_o10lm")

[node name="SouthWall" type="MeshInstance3D" parent="Level"]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 0, 1, 3)
mesh = SubResource("BoxMesh_7dm8p")

[node name="StaticBody3D" type="StaticBody3D" parent="Level/SouthWall"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Level/SouthWall/StaticBody3D"]
shape = SubResource("ConvexPolygonShape3D_3dnwh")

[node name="WestWall" type="MeshInstance3D" parent="Level"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -4.5, 1, -0.5)
mesh = SubResource("BoxMesh_7dm8p")

[node name="StaticBody3D" type="StaticBody3D" parent="Level/WestWall"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Level/WestWall/StaticBody3D"]
shape = SubResource("ConvexPolygonShape3D_fe42c")

[node name="EastWall" type="MeshInstance3D" parent="Level"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 4.5, 1, -0.5)
mesh = SubResource("BoxMesh_7dm8p")

[node name="StaticBody3D" type="StaticBody3D" parent="Level/EastWall"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Level/EastWall/StaticBody3D"]
shape = SubResource("ConvexPolygonShape3D_jctxr")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(-0.866025, -0.433013, 0.25, 0, 0.5, 0.866025, -0.5, 0.75, -0.433013, 0, 0, 0)
shadow_enabled = true

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_b3wwa")

[node name="StaticBody3D" type="StaticBody3D" parent="."]
collision_layer = 5

[node name="CollisionShape3D" type="CollisionShape3D" parent="StaticBody3D"]
shape = SubResource("BoxShape3D_sgmla")

[node name="CSGBox3D" type="CSGBox3D" parent="StaticBody3D/CollisionShape3D"]
size = Vector3(100, 1, 100)
material = SubResource("StandardMaterial3D_5e1sp")

[node name="Controllable" parent="." instance=ExtResource("2_o268x")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 3.26727, 0.735282, -2.03005)

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.112492, 0.993653, 0, -0.993653, 0.112492, -0.00297737, 6.07282, 0.266064)
current = true
size = 6.366

[node name="Player" type="CharacterBody3D" parent="." groups=["player"]]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.12402, 0)
collision_layer = 8
script = ExtResource("2_tm0ii")

[node name="MeshInstance3D" type="MeshInstance3D" parent="Player"]
mesh = SubResource("CapsuleMesh_v4icb")
skeleton = NodePath("")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Player"]
shape = SubResource("ConvexPolygonShape3D_elfxu")

[node name="CSGSphere3D" type="CSGSphere3D" parent="Player"]
transparency = 0.8
material = SubResource("StandardMaterial3D_cqhaw")

[node name="Pivot" type="Node3D" parent="Player"]
script = ExtResource("5_ynxwe")

[node name="Area3D" type="Area3D" parent="Player/Pivot"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.470406, -3.075)
collision_mask = 2
script = ExtResource("4_mnrto")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Player/Pivot/Area3D"]
shape = SubResource("BoxShape3D_wyyjr")

[node name="CSGBox3D" type="CSGBox3D" parent="Player/Pivot/Area3D"]
visible = false
transparency = 0.8
size = Vector3(0.4, 2, 5)
material = SubResource("StandardMaterial3D_xn6at")

[node name="DirectionIndicator" type="Node3D" parent="Player/Pivot"]
transform = Transform3D(0.3, 0, 0, 0, 0.96, 0, 0, 0, 0.96, 0, 0, -0.0679903)

[node name="CSGCylinder3D" type="CSGCylinder3D" parent="Player/Pivot/DirectionIndicator"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0, -3.08066)
transparency = 0.8
radius = 0.1
height = 4.0
material = ExtResource("6_slhd8")

[node name="CSGBox3D2" type="CSGBox3D" parent="Player/Pivot/DirectionIndicator/CSGCylinder3D"]
transform = Transform3D(0.754251, 0, 0.656586, 0.656586, -4.37114e-08, -0.754251, 2.87003e-08, 1, -3.29694e-08, 0.263537, 1.91231, 1.19209e-07)
size = Vector3(0.3, 0.2, 1)
material = ExtResource("6_slhd8")

[node name="CSGBox3D3" type="CSGBox3D" parent="Player/Pivot/DirectionIndicator/CSGCylinder3D/CSGBox3D2"]
transform = Transform3D(-8.9407e-08, 0, 1, 0, 1, 0, -1, 0, -8.9407e-08, -0.471972, 0.00134039, -0.351306)
size = Vector3(0.3, 0.2, 0.8)
material = ExtResource("6_slhd8")

[node name="StateChart" type="Node" parent="Player"]
script = ExtResource("8_v3xjy")

[node name="CompoundState" type="Node" parent="Player/StateChart"]
script = ExtResource("9_xvk8c")
initial_state = NodePath("NormalState")

[node name="NormalState" type="Node" parent="Player/StateChart/CompoundState"]
script = ExtResource("10_sdl42")

[node name="ToTargetting" type="Node" parent="Player/StateChart/CompoundState/NormalState"]
script = ExtResource("11_xoomb")
to = NodePath("../../TargettingState")
event = &"action_pressed"
delay_in_seconds = "0.0"

[node name="HauntingState" type="Node" parent="Player/StateChart/CompoundState"]
script = ExtResource("10_sdl42")

[node name="ToNormal" type="Node" parent="Player/StateChart/CompoundState/HauntingState"]
script = ExtResource("11_xoomb")
to = NodePath("../../NormalState")
event = &"cancel"
delay_in_seconds = "0.0"

[node name="TargettingState" type="Node" parent="Player/StateChart/CompoundState"]
script = ExtResource("10_sdl42")

[node name="ToNormal" type="Node" parent="Player/StateChart/CompoundState/TargettingState"]
script = ExtResource("11_xoomb")
to = NodePath("../../NormalState")
event = &"action_pressed"
delay_in_seconds = "0.0"

[node name="ToNormal2" type="Node" parent="Player/StateChart/CompoundState/TargettingState"]
script = ExtResource("11_xoomb")
to = NodePath("../../NormalState")
event = &"cancel"
delay_in_seconds = "0.0"

[node name="ToHaunting" type="Node" parent="Player/StateChart/CompoundState/TargettingState"]
script = ExtResource("11_xoomb")
to = NodePath("../../HauntingState")
event = &"action_confirm"
delay_in_seconds = "0.0"

[node name="CSGBox3D" type="CSGBox3D" parent="."]
size = Vector3(0.2, 0.2, 0.2)

[node name="StateChartDebugger" parent="." instance=ExtResource("12_q4a42")]
visible = false
custom_minimum_size = Vector2(300, 0)
anchors_preset = 9
anchor_right = 0.0
offset_right = 18.0
grow_horizontal = 1
enabled = false
initial_node_to_watch = NodePath("../Player/StateChart")

[node name="PanelContainer" type="PanelContainer" parent="."]
offset_right = 312.0
offset_bottom = 64.0
size_flags_horizontal = 0
size_flags_vertical = 0
script = ExtResource("12_ak4db")

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
theme = ExtResource("15_jjqdq")

[node name="CancelControlToolTip" type="HBoxContainer" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
theme = SubResource("Theme_sdmj6")
script = ExtResource("12_xgk82")
icon = ExtResource("13_7aih0")
title = "Cancel"

[node name="TextureRect" type="TextureRect" parent="PanelContainer/VBoxContainer/CancelControlToolTip"]
layout_mode = 2
theme = ExtResource("15_jjqdq")
texture = ExtResource("13_7aih0")

[node name="Label" type="Label" parent="PanelContainer/VBoxContainer/CancelControlToolTip"]
layout_mode = 2
theme = ExtResource("15_jjqdq")
text = "CancelCancelCancelCancel"

[node name="TargetModeControlTooltip" type="HBoxContainer" parent="PanelContainer/VBoxContainer"]
visible = false
layout_mode = 2
size_flags_horizontal = 0
theme = ExtResource("15_jjqdq")
script = ExtResource("12_xgk82")
icon = ExtResource("14_0qnn5")
title = "Target Mode"

[node name="TextureRect" type="TextureRect" parent="PanelContainer/VBoxContainer/TargetModeControlTooltip"]
layout_mode = 2
theme = ExtResource("15_jjqdq")
texture = ExtResource("13_7aih0")

[node name="Label" type="Label" parent="PanelContainer/VBoxContainer/TargetModeControlTooltip"]
layout_mode = 2
theme = ExtResource("15_jjqdq")
text = "Cancel"

[node name="HauntingModeControlTooltip" type="HBoxContainer" parent="PanelContainer/VBoxContainer"]
visible = false
layout_mode = 2
theme = ExtResource("15_jjqdq")
script = ExtResource("12_xgk82")
icon = ExtResource("15_chj1h")
title = "Haunting Mode"

[node name="TextureRect" type="TextureRect" parent="PanelContainer/VBoxContainer/HauntingModeControlTooltip"]
layout_mode = 2
theme = ExtResource("15_jjqdq")
texture = ExtResource("13_7aih0")

[node name="Label" type="Label" parent="PanelContainer/VBoxContainer/HauntingModeControlTooltip"]
layout_mode = 2
theme = ExtResource("15_jjqdq")
text = "Cancel"

[node name="PressurePlate" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2.495, 0.5, -2.545)
collision_mask = 10
script = ExtResource("18_s5klu")
pressed_material = ExtResource("19_45y5y")

[node name="CollisionShape3D" type="CollisionShape3D" parent="PressurePlate"]
shape = SubResource("BoxShape3D_l5k13")

[node name="CSGBox3D" type="CSGBox3D" parent="PressurePlate/CollisionShape3D"]
size = Vector3(1, 0.1, 1)
material = ExtResource("19_0gneh")

[node name="PressurePlate2" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2.629, 0.5, -2.545)
collision_mask = 10
script = ExtResource("18_s5klu")
pressed_material = ExtResource("19_45y5y")

[node name="CollisionShape3D" type="CollisionShape3D" parent="PressurePlate2"]
shape = SubResource("BoxShape3D_l5k13")

[node name="CSGBox3D" type="CSGBox3D" parent="PressurePlate2/CollisionShape3D"]
size = Vector3(1, 0.1, 1)
material = ExtResource("21_4idxb")

[node name="Door" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, -3.3082)
script = ExtResource("23_s04dm")
open_material = ExtResource("24_uway1")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Door"]
shape = SubResource("BoxShape3D_v384s")

[node name="CSGBox3D2" type="CSGBox3D" parent="Door/CollisionShape3D"]
size = Vector3(1, 1, 0.5)
material = ExtResource("23_s7k4x")

[connection signal="body_entered" from="Player/Pivot/Area3D" to="Player/Pivot/Area3D" method="_on_body_entered"]
[connection signal="body_exited" from="Player/Pivot/Area3D" to="Player/Pivot/Area3D" method="_on_body_exited"]
[connection signal="state_entered" from="Player/StateChart/CompoundState/NormalState" to="Player" method="_on_normal_state_state_entered"]
[connection signal="state_entered" from="Player/StateChart/CompoundState/NormalState" to="PanelContainer/VBoxContainer/CancelControlToolTip" method="hide"]
[connection signal="state_entered" from="Player/StateChart/CompoundState/NormalState" to="PanelContainer/VBoxContainer/TargetModeControlTooltip" method="show"]
[connection signal="state_entered" from="Player/StateChart/CompoundState/NormalState" to="PanelContainer/VBoxContainer/HauntingModeControlTooltip" method="hide"]
[connection signal="state_physics_processing" from="Player/StateChart/CompoundState/NormalState" to="Player" method="_on_normal_state_state_physics_processing"]
[connection signal="state_entered" from="Player/StateChart/CompoundState/HauntingState" to="Player" method="_on_haunting_state_state_entered"]
[connection signal="state_entered" from="Player/StateChart/CompoundState/HauntingState" to="PanelContainer/VBoxContainer/CancelControlToolTip" method="show"]
[connection signal="state_entered" from="Player/StateChart/CompoundState/HauntingState" to="PanelContainer/VBoxContainer/TargetModeControlTooltip" method="hide"]
[connection signal="state_entered" from="Player/StateChart/CompoundState/HauntingState" to="PanelContainer/VBoxContainer/HauntingModeControlTooltip" method="hide"]
[connection signal="state_exited" from="Player/StateChart/CompoundState/HauntingState" to="Player" method="_on_haunting_state_state_exited"]
[connection signal="state_input" from="Player/StateChart/CompoundState/HauntingState" to="Player" method="_on_haunting_state_state_input"]
[connection signal="state_entered" from="Player/StateChart/CompoundState/TargettingState" to="Player" method="_on_targetting_state_state_entered"]
[connection signal="state_entered" from="Player/StateChart/CompoundState/TargettingState" to="PanelContainer/VBoxContainer/CancelControlToolTip" method="show"]
[connection signal="state_entered" from="Player/StateChart/CompoundState/TargettingState" to="PanelContainer/VBoxContainer/TargetModeControlTooltip" method="hide"]
[connection signal="state_entered" from="Player/StateChart/CompoundState/TargettingState" to="PanelContainer/VBoxContainer/HauntingModeControlTooltip" method="show"]
[connection signal="state_exited" from="Player/StateChart/CompoundState/TargettingState" to="Player" method="_on_targetting_state_state_exited"]
[connection signal="state_input" from="Player/StateChart/CompoundState/TargettingState" to="Player" method="_on_targetting_state_state_input"]
[connection signal="state_physics_processing" from="Player/StateChart/CompoundState/TargettingState" to="Player" method="_on_targetting_state_state_physics_processing"]
[connection signal="resized" from="PanelContainer/VBoxContainer" to="PanelContainer" method="_on_v_box_container_resized"]
[connection signal="actived" from="PressurePlate" to="Door" method="_on_pressure_plate_actived"]
[connection signal="body_entered" from="PressurePlate" to="PressurePlate" method="_on_body_entered"]
[connection signal="body_exited" from="PressurePlate" to="PressurePlate" method="_on_body_exited"]
[connection signal="actived" from="PressurePlate2" to="Door" method="_on_pressure_plate_2_actived"]
[connection signal="body_entered" from="PressurePlate2" to="PressurePlate2" method="_on_body_entered"]
[connection signal="body_exited" from="PressurePlate2" to="PressurePlate2" method="_on_body_exited"]
[connection signal="unlocked" from="Door" to="PressurePlate" method="deactivate"]
[connection signal="unlocked" from="Door" to="PressurePlate2" method="deactivate"]
